# web-sqash

./: .gitignore  README.md  app.py  main.py  process.py  process_manager.py  pyproject.toml
erendil/: core.py  pydantic_models.py
erendil/core/: config.py  constants.py
erendil/database/: trade_db.py
erendil/exchange/: binance.py
erendil/indicators/: base.py  buy_sell.py  trailing_stop.py
erendil/models/: data_models.py  enums.py  exceptions.py
erendil/trading/: analyzer.py  position.py  trade_manager.py
sample_trade/: ATOMUSDT_1h_log_file.json  BTCUSDT_1h_log_file.json  BTCUSDT_1m_log_file.json  BTCUSDT_5m_log_file.json  ETHUSDT_1h_log_file.json  ETHUSDT_1m_log_file.json  SOLUSDT_1h_log_file.json  SOLUSDT_4h_log_file.json
templates/: index.html  login.html
