[project]
name = "erendil"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.4",
    "httpx>=0.27.2",
    "numpy>=2.1.3",
    "polars>=1.12.0",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.32.0",
    "websockets>=14.0",
]
