[project]
name = "erendil"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.10.10",
    "aiosqlite>=0.20.0",
    "fastapi>=0.115.4",
    "httpx>=0.27.2",
    "jinja2>=3.1.4",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "polars>=1.12.0",
    "psutil>=6.1.0",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.17",
    "requests>=2.32.3",
    "runpod>=1.7.4",
    "uvicorn>=0.32.0",
    "websockets>=14.0",
]
